--- a/ProjectUbuild/Views/FullHouse/Index.cshtml
+++ b/ProjectUbuild/Views/FullHouse/Index.cshtml
@@ -156,7 +156,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group form-group-default input-group">
-                                    <label for="houseEligibility" class="ng-binding">Please enter your monthly.</label>
+                                    <label for="houseEligibility" class="ng-binding">Please enter your monthly income.</label>
                                     <input required="" autocomplete="off" data-ng-model="builder.monthlyIncome" name="monthlyIncome" placeholder="Monthly Income here" type="number" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
 
                                 </div>
