--- a/ProjectUbuild/Views/Home/FaQs.cshtml
+++ b/ProjectUbuild/Views/Home/FaQs.cshtml
@@ -38,13 +38,13 @@
                         <div class="card-header " role="tab" id="headingOne">
                             <h4 class="card-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="False" aria-controls="collapseOne">
-                                    1. Do I need to create an account/profile to shop for my project?
+                                    1. What is U-Build?
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseOne" class="collapse" role="tabcard" aria-labelledby="headingOne">
                             <div class="card-block">
-                                No
+                                U-Build is a model that makes it simple and easy to self-build your own home rather than purchasing an already complete house on the market. U-Build allows you to build a house that’s tailored to your design requirements, lifestyle and budget.
                             </div>
                         </div>
                     </div>
@@ -52,13 +52,13 @@
                         <div class="card-header " role="tab" id="headingTwo">
                             <h4 class="card-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    2. How do I edit my profile?
+                                    2. Who can use U-Build?
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseTwo" class="collapse" role="tabcard" aria-labelledby="headingTwo">
                             <div class="card-block">
-                                Click @Html.ActionLink("here", "Index", "Profile") update your profile.
+                                U-Build can be used by anyone who is interested in building a residential property using their own design or one of the designs we have provided here.
                             </div>
                         </div>
                     </div>
@@ -66,14 +66,13 @@
                         <div class="card-header " role="tab" id="headingThree">
                             <h4 class="card-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    3. How do I log in and out of my profile/account?
+                                    3. Can I use U-Build to renovate my house?
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseThree" class="collapse" role="tabcard" aria-labelledby="headingThree">
                             <div class="card-block">
-                                To login, it requires that you should have sign in first through the self-registered menu to acquire a user ID and a password. If you have already created a user ID and a password, you should
-                                go straight to the login tab and provide your login details to access the platform.
+
                             </div>
                         </div>
                     </div>
@@ -82,13 +81,13 @@
                         <div class="card-header " role="tab" id="headingFour">
                             <h4 class="card-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
-                                    4. What security verifications do I need?
+                                    4. What type of house can I build with U-Build?
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseFour" class="collapse" role="tabcard" aria-labelledby="headingFour">
                             <div class="card-block">
-                                You need a unique User ID and an alphanumeric password to be able to access the platform.
+                                If you chose one of our house designs you can build a 2-bedroom house or a 3 bedroom house. If you decide to use your own design, it can include anything from a 1 bedroom house to a 5 bedroom house.
                             </div>
                         </div>
                     </div>
@@ -97,13 +96,13 @@
                         <div class="card-header " role="tab" id="headingFive">
                             <h4 class="card-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
-                                    5. How do I get a vendor for my building project?
+                                    5. Can U-Build help me buy and register land?
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseFive" class="collapse" role="tabcard" aria-labelledby="headingFive">
                             <div class="card-block">
-                                All vendors and suppliers are on our market place portal.
+
                             </div>
                         </div>
                     </div>
@@ -112,13 +111,15 @@
                         <div class="card-header " role="tab" id="headingSix">
                             <h4 class="card-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
-                                    6. Why does U-build need to verify my identity?
+                                    6. How do I log in and out of my profile/account?
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseSix" class="collapse" role="tabcard" aria-labelledby="headingSix">
                             <div class="card-block">
-                                U-Build will not directly verify your identity but U-Build will ensure that KYC is performed on customers who are ready to access a loan to purchase materials for any of the building stages.
+                                To login, click on the login button at the top right-hand corner of the U-Build Homepage. In order to login successfully, you need to register by creating a user ID and a password.
+                                it requires that you should have sign in first through the self-registered menu to acquire If you have already created a user ID and a password, you should go straight to the login tab and provide your login details to access the platform.
+
                             </div>
                         </div>
                     </div>
@@ -127,13 +128,13 @@
                         <div class="card-header " role="tab" id="headingSeven">
                             <h4 class="card-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseThree">
-                                    7. Can I make multiple purchases?
+                                    7. What do I do if I forget my log in and password?
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseSeven" class="collapse" role="tabcard" aria-labelledby="headingSeven">
                             <div class="card-block">
-                                Yes.
+                                You can reset your password yourself or you may contact the Bank on the toll-free number for a new password to be generated for you.
                             </div>
                         </div>
                     </div>
@@ -142,13 +143,13 @@
                         <div class="card-header " role="tab" id="headingEight">
                             <h4 class="card-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false" aria-controls="collapseThree">
-                                    8. Do I need a GHL Bank account to make a purchase?
+                                    8. Do I need to create an account/profile to shop for my project?
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseEight" class="collapse" role="tabcard" aria-labelledby="headingEight">
                             <div class="card-block">
-                                No.
+                                No, you can browse items on the U-Build Market Place without an account/ profile but in order to make a purchase you will have to register
                             </div>
                         </div>
                     </div>
@@ -157,13 +158,13 @@
                         <div class="card-header " role="tab" id="headingNine">
                             <h4 class="card-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="false" aria-controls="collapseThree">
-                                    9. Can I make partial payments and request a loan to pay off?
+                                    9. What security verifications do I need?
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseNine" class="collapse" role="tabcard" aria-labelledby="headingNine">
                             <div class="card-block">
-                                Yes, but you will have to check on the @Html.ActionLink("loan calculator", "Eligibility", "Loan") whether you qualify to access the amount involved.
+                                You need a unique User ID and an alphanumeric password to be able to access the platform.
                             </div>
                         </div>
                     </div>
@@ -172,29 +173,28 @@
                         <div class="card-header " role="tab" id="headingTen">
                             <h4 class="card-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen" aria-expanded="false" aria-controls="collapseThree">
-                                    10. What are the requirements to apply for a loan?
+                                    10. How do I edit my profile?
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseTen" class="collapse" role="tabcard" aria-labelledby="headingTen">
                             <div class="card-block">
-                                You need to check on the @Html.ActionLink("loan calculator", "Eligibility", "Loan") to determine whether you qualify for the loan amount you need. You can then proceed to apply for the loan, which will require you to submit some basic information for the credit team to access your application viability. In all these, you will
-                                receive a tracking number which would assist you track the progress of your loan application in the system.
+
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="card card-default m-b-0">
                         <div class="card-header " role="tab" id="headingEleven">
                             <h4 class="card-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven" aria-expanded="false" aria-controls="collapseThree">
-                                    11. Can I schedule payments to be delivered on a future date or set up automatic monthly debits from my account?
+                                    11. Why does U-build need to verify my identity?
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseEleven" class="collapse" role="tabcard" aria-labelledby="headingEleven">
                             <div class="card-block">
-                                This can only apply to customers who applied for a loan to purchase goods from a vendor. 
+                                U-Build will not directly verify your identity but U-Build will ensure that all the personal information required to apply for a loan is complete and accurate.
                             </div>
                         </div>
                     </div>
@@ -202,13 +202,13 @@
                         <div class="card-header " role="tab" id="headingTwelve">
                             <h4 class="card-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve" aria-expanded="false" aria-controls="collapseThree">
-                                    12. What do I do if I forget my log in and password?
+                                    12. How much money can I borrow to build my house?
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseTwelve" class="collapse" role="tabcard" aria-labelledby="headingTwelve">
                             <div class="card-block">
-                                You can reset your password yourself. Please follow the link @(Html.ActionLink("here","ForgotPassword","Account")).
+
                             </div>
                         </div>
                     </div>
@@ -216,16 +216,47 @@
                         <div class="card-header " role="tab" id="headingThirteen">
                             <h4 class="card-title">
                                 <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen" aria-expanded="false" aria-controls="collapseThree">
-                                    13. Who do I contact if I have concerns not addressed by this FAQ?
+                                    13. How much time do I have to repay my loan?
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseThirteen" class="collapse" role="tabcard" aria-labelledby="headingThirteen">
                             <div class="card-block">
-                                Please call our 24hr contact experience center or call our toll free number on the U-Build portal.
+
                             </div>
                         </div>
                     </div>
+
+                    <div class="card card-default m-b-0">
+                        <div class="card-header " role="tab" id="headingFourteen">
+                            <h4 class="card-title">
+                                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">
+                                    13. If I am unable to pay my loan will my house be taken away from me?
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseFourteen" class="collapse" role="tabcard" aria-labelledby="headingFourteen">
+                            <div class="card-block">
+
+                            </div>
+                        </div>
+                    </div>
+                    
+                <div class="card card-default m-b-0">
+                    <div class="card-header " role="tab" id="headingFifteen">
+                        <h4 class="card-title">
+                            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
+                                13. What are the requirements to apply for a loan?
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseFifteen" class="collapse" role="tabcard" aria-labelledby="headingFifteen">
+                        <div class="card-block">
+                            You need to check on the loan calculator to determine whether you qualify for the loan amount you need. You can then proceed to apply for the loan, which will require you to submit some basic information for our team to access your application viability. Once you begin the loan application process, you will receive a tracking number which you can use to track the progress of your loan application in the system.
+                        </div>
+                    </div>
+                </div>
+
                 </div>
                 <!--end of text tabs-->
             </div>
