--- a/ProjectUbuild/Views/Shared/_Layout.cshtml
+++ b/ProjectUbuild/Views/Shared/_Layout.cshtml
@@ -274,7 +274,7 @@
                     <div class="col-sm-12 overflow-hidden">
                         <i class="ti-announcement icon icon-sm pull-left color-primary"></i>
                         <p class="mb0 pull-left">
-                            With <strong>U-Build</strong> you can apply for a loan to build your dream house. Start now!.
+                            With <strong>U-Build</strong> you can apply for a loan to build your dream house. Start now!
                         </p>
                         @Html.ActionLink("Check your Eligibility", "Eligibility", "Loan", null, new { @class = "btn btn-sm btn-filled mb0", style = "background:#a54240;border:0" })
 
