--- a/ProjectUbuild/Views/Loan/Eligibility.cshtml
+++ b/ProjectUbuild/Views/Loan/Eligibility.cshtml
@@ -112,7 +112,7 @@
                     <div class="row">
                         <div class="col-md-10">
                             <div class="form-group form-group-default input-group">
-                                <label for="houseEligibility" class="ng-binding">Please enter your monthly.</label>
+                                <label for="houseEligibility" class="ng-binding">Please enter your monthly income.</label>
                                 <input required="" autocomplete="off" data-ng-model="builder.monthlyIncome" id="houseEligibility" placeholder="Monthly Income here" type="number" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
                                
                             </div>
