--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -144,9 +144,9 @@
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        <tr>
-                                            <td>Land Acquisition</td>
-                                            <td>2,000.00</td>
+                                        <tr data-ng-repeat="item in vm.boqs">
+                                            <td data-ng-bind="item.Name">Land Acquisition</td>
+                                            <td data-ng-bind="item.Price | currency:''">2,000.00</td>
                                         </tr>
                                         </tbody>
                                     </table>
